using Microsoft.AspNetCore.Identity;

namespace RestaurantApp.Domain.Models;



public class ApplicationUser : IdentityUser
{
    public string? FirstName { get; set; }
    public string? LastName { get; set; }
    public DateTime CreatedAt { get; set; } = DateTime.UtcNow;
    
    public bool TwoFactorEnabled { get; set; } = false;
    public string? TwoFactorSecretKey { get; set; }

    public DateTime? LastLoginAt { get; set; }
    public bool IsActive { get; set; } = true;
    
    public bool CanBeSearched { get; set; } = true;
    

    public void UpdateLastLogin()
    {
        LastLoginAt = DateTime.UtcNow;
    }
    
    public ICollection<UserNotification> Notifications { get; set; } = [];
    public ICollection<EmployeeInvitation> ReceivedInvitations { get; set; } = [];
}